--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="2CGZs9O8mkL762QqNwuJ3CuDF1XNt4ounMpSa7Nzyy4" />
     <meta
       name="description"
       content="Web site created using create-react-app"
