--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <meta name="google-site-verification" content="2CGZs9O8mkL762QqNwuJ3CuDF1XNt4ounMpSa7Nzyy4" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Union Cabs - Premium cab booking services in Lucknow. Monthly/Daily car rentals, Airport pickup, Outstation trips. Developed by Anand Verma."
     />
+    <meta name="author" content="Anand Verma - https://avfreelancer.vercel.app/" />
+    <meta name="keywords" content="cab booking, car rental, Union Cabs, Lucknow, taxi service, airport pickup, outstation cabs" />
     <link rel="apple-touch-icon" href="/favicon.ico"  />
     <!--
       manifest.json provides metadata used when your web app is installed on a
